fix: footer overflow in sidebar-sidecar-layout

--- a/src/layouts/sidebar-sidecar/sidebar-sidecar-layout.module.css
+++ b/src/layouts/sidebar-sidecar/sidebar-sidecar-layout.module.css
@@ -18,7 +18,43 @@ for further details.
   padding the content area. So, we create a CSS var
   to make it reusable and express this intent. */
   --main-area-top-padding: 32px;
+
+  /* When the sidecar is hidden, then --main-area-padding-right must adjust.
+  Note that the "left" value, --main-area-padding-left, is declared in 
+  core-dev-dot-layout.module.css, as the left value  must be shared with the
+  navigation-header component, in order to match alignment in design specs. */
+  --main-area-padding-right: 24px;
+
+  /*
+  We want our footer to have a top border which spans
+  across both the main content and sidecar.
+  We also want our footer content to be aligned with our main content,
+  taking on the same max width and left-right padding.
+
+  To achieve this, we set the main content max width,
+  main content padding, and sidecar width as CSS variables
+  to be used in the main content, sidecar, and footer containers.
+
+  The footer itself contains an absolutely positioned :before element
+  which serves as the border, and which overflows the footer on both sides.
+  
+  The footer container ensures this border overflow does not cause scroll
+  using overflow hidden. We place an empty sidecar placeholder element
+  within this container, next to the footer, to ensure spacing is consistent.
+
+  This method requires two separate "rows" for the main content + sidecar area,
+  and for the footer area. Having to share values between them is not ideal.
+  But, it sidesteps issues in mixing overflow: hidden with position: sticky.
+  Details: https://css-tricks.com/dealing-with-overflow-and-position-sticky/
+  */
+  --main-area-max-width: 780px;
+  --sidecar-width: 220px;
+  --sidecar-margin-left: 48px;
 }
+
+/**
+ * Sidebar + main containers
+ */
 
 .sidebar {
   background-color: white;
@@ -50,6 +86,16 @@ for further details.
   }
 }
 
+.mainAreaAndFooter {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+/**
+ * Main area row
+ */
+
 .mainArea {
   display: flex;
   flex-grow: 1;
@@ -57,22 +103,21 @@ for further details.
   justify-content: center;
   padding-bottom: 32px;
   padding-top: var(--main-area-top-padding);
-  padding-left: var(--main-area-padding-left-right);
-  padding-right: var(--main-area-padding-left-right);
+  padding-left: var(--main-area-padding-left);
+  padding-right: var(--main-area-padding-right);
 }
 
-.main {
+.mainContent {
   align-self: flex-start;
   flex-grow: 1;
   min-width: 0;
-  max-width: calc(780px + (var(--main-area-padding-left-right) * 2));
-  padding-left: var(--main-area-padding-left-right);
-  padding-right: var(--main-area-padding-left-right);
 
-  @media (--dev-dot-tablet-down) {
-    padding-left: 0;
-    padding-right: 0;
-    max-width: none;
+  /* 50vh padding-bottom ensures that all
+  jump-nav items have room to be jumped to */
+  padding-bottom: 50vh;
+
+  @media (--dev-dot-desktop) {
+    max-width: var(--main-area-max-width);
   }
 }
 
@@ -80,17 +125,43 @@ for further details.
   margin-top: 64px;
 }
 
-.footer {
-  /* the 50vh margin-top on footer ensures that all
-  jump-nav items have room to be jumped to */
-  margin-top: 50vh;
+.sidecar {
+  display: none;
+
+  @media (--dev-dot-desktop) {
+    display: block;
+    border: 1px solid magenta;
+    align-self: flex-start;
+    flex-shrink: 0;
+    margin-left: var(--sidecar-margin-left);
+    position: sticky;
+    top: calc(var(--sticky-bars-height) + var(--main-area-top-padding));
+    width: var(--sidecar-width);
+  }
 }
 
-.sidecar {
-  align-self: flex-start;
+/**
+ * Footer area row
+ */
+
+.footerArea {
+  display: flex;
+  flex-grow: 1;
+  min-width: 0;
+  justify-content: center;
+  padding-left: var(--main-area-padding-left);
+  padding-right: var(--main-area-padding-left);
+  overflow: hidden;
+}
+
+.footer {
+  flex-grow: 1;
+  max-width: var(--main-area-max-width);
+}
+
+/* Acts as a sidecar placeholder to ensure spacing is consistent */
+.footerSpaceForSidecar {
   flex-shrink: 0;
-  margin-left: 24px;
-  position: sticky;
-  top: calc(var(--sticky-bars-height) + var(--main-area-top-padding));
-  width: 220px;
+  margin-left: var(--sidecar-margin-left);
+  width: var(--sidecar-width);
 }
